--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
+    <!--HEADER SECTION-->
+    <div></div>
+    <!--HEADER SECTION-->
     <div></div>
     <div></div>
     <div></div>
-    <div></div>
+    <!--FOOTER SECTION-->
     <div></div>
 
     <script href="/index.js"></script>
